--- a/main_file/main_file.cbp
+++ b/main_file/main_file.cbp
@@ -31,7 +31,13 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="extra.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="main.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="queue.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
